update the example